# HBStreamSDK

./: CMakeLists.txt  common.cpp  common.h  errorno.h  testdll.cpp  testdll_global.h
DLLDemo/: CMakeLists.txt  main.cpp
DLLDemo2/: DLLDemo2.pro  dlldemo2.cpp  dlldemo2.h  dlldemo2.ui  main.cpp
JqSoap/: BaseC.cpp  BaseClient.cpp  BaseH.h  BaseInterface.h  BaseJqServiceHttpBindingObject.h  BaseJqServiceHttpBindingProxy.h  BaseStub.h  BaseintcommonObject.h  JqServiceHttpBinding.nsmap
openssl/: opensslconf.h
tinyxml/: tinyxml.cpp
