project(HBStreamSDK)
cmake_minimum_required(VERSION 2.8)
set(SRC common.cpp common.h errorno.h testdll_global.h testdll.cpp)
set(TINYXML tinyxml/tinystr.cpp tinyxml/tinyxml.cpp tinyxml/tinyxml.h tinyxml/tinystr.h tinyxml/tinyxmlerror.cpp tinyxml/tinyxmlparser.cpp)
set(JQSOAP JqSoap/BaseC.cpp JqSoap/BaseJqServiceHttpBindingProxy.h JqSoap/BaseClient.cpp JqSoap/BaseStub.h JqSoap/BaseH.h JqSoap/JqServiceHttpBinding.nsmap JqSoap/BaseintcommonObject.h JqSoap/stdsoap2.cpp JqSoap/BaseInterface.h JqSoap/stdsoap2.h JqSoap/BaseJqServiceHttpBindingObject.h)
set(SRC_LIST ${JQSOAP} ${TINYXML} ${SRC})
include_directories(./JqSoap)
ADD_DEFINITIONS(-DWITH_OPENSSL)
link_libraries(ssl crypto curl)
add_library(HBStreamSDK SHARED ${SRC_LIST})
